tests/fail/elaboration/numeric-literal/invalid.snap
stdout = ''
stderr = '''
error: failed to parse numeric literal
  ┌─ tests/fail/elaboration/numeric-literal/invalid.fathom:3:1
  │
3 │ 0zzz : U32
  │ ^^^^ invalid digit found in string

'''
